--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -19,7 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="render\Scene.h" />
+    <ClInclude Include="render\Camera\Camera.h" />
+    <ClInclude Include="render\RenderData\RenderData.h" />
+    <ClInclude Include="render\Scene\Scene.h" />
     <ClInclude Include="source\math\geometry\hitable.h" />
     <ClInclude Include="source\math\geometry\plane.h" />
     <ClInclude Include="source\math\geometry\sphere.h" />
@@ -28,7 +30,8 @@
     <ClInclude Include="windows\Window.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="render\Scene.cpp" />
+    <ClCompile Include="render\Camera\Camera.cpp" />
+    <ClCompile Include="render\Scene\Scene.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -140,7 +143,7 @@
       <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\engine;$(SolutionDir)\lib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
