--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="source\math\geometry\triangle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="source\mesh\Mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="render\Camera\Camera.cpp">
