--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -31,12 +31,14 @@
     <ClInclude Include="source\math\geometry\triangle.h" />
     <ClInclude Include="source\math\ray.h" />
     <ClInclude Include="source\mesh\Mesh.h" />
+    <ClInclude Include="source\mesh\TriangleOcTree.h" />
     <ClInclude Include="utils\FPSTimer.h" />
     <ClInclude Include="windows\Window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="render\Camera\Camera.cpp" />
     <ClCompile Include="render\Scene\Scene.cpp" />
+    <ClCompile Include="source\mesh\TriangleOcTree.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
