--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -33,16 +33,24 @@
     <ClInclude Include="source\math\ray.h" />
     <ClInclude Include="source\mesh\Mesh.h" />
     <ClInclude Include="source\mesh\TriangleOcTree.h" />
-    <ClInclude Include="utils\FPSTimer.h" />
     <ClInclude Include="utils\paralell_executor\parallel_executor.h" />
+    <ClInclude Include="utils\Timer\FPSTimer.h" />
     <ClInclude Include="windows\Window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="render\Camera\Camera.cpp" />
     <ClCompile Include="render\Lighting\Lights.cpp" />
+    <ClCompile Include="render\RenderObject\RenderObject.cpp" />
     <ClCompile Include="render\Scene\Scene.cpp" />
+    <ClCompile Include="source\draggers\dragger.cpp" />
+    <ClCompile Include="source\math\geometry\plane.cpp" />
+    <ClCompile Include="source\math\geometry\sphere.cpp" />
+    <ClCompile Include="source\math\geometry\triangle.cpp" />
+    <ClCompile Include="source\math\ray.cpp" />
+    <ClCompile Include="source\mesh\Mesh.cpp" />
     <ClCompile Include="source\mesh\TriangleOcTree.cpp" />
     <ClCompile Include="utils\paralell_executor\parallel_executor.cpp" />
+    <ClCompile Include="utils\Timer\FPSTimer.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
