--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClInclude Include="render\Graphics\PixelShader.hpp">
       <Filter>Header Files\Graphics</Filter>
     </ClInclude>
+    <ClInclude Include="include\utility\utility.hpp">
+      <Filter>Header Files\Util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="render\D3D\d3d.cpp">
@@ -172,6 +175,9 @@
     </ClCompile>
     <ClCompile Include="render\Graphics\VertexShader.cpp">
       <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="source\utility\utility.cpp">
+      <Filter>Source Files\Util</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
