--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -28,6 +28,7 @@
     <ClInclude Include="render\D3D\d3d.hpp" />
     <ClInclude Include="render\Graphics\PixelShader.hpp" />
     <ClInclude Include="render\Graphics\Vertex.hpp" />
+    <ClInclude Include="render\Graphics\VertexBuffer.hpp" />
     <ClInclude Include="render\Graphics\VertexShader.hpp" />
     <ClInclude Include="render\RayTracer\Camera\Camera.h" />
     <ClInclude Include="render\RayTracer\Lighting\Lights.h" />
@@ -50,7 +51,6 @@
   <ItemGroup>
     <ClCompile Include="render\D3D\d3d.cpp" />
     <ClCompile Include="render\Graphics\PixelShader.cpp" />
-    <ClCompile Include="render\Graphics\VertexShader.cpp" />
     <ClCompile Include="render\RayTracer\Camera\Camera.cpp" />
     <ClCompile Include="render\RayTracer\Lighting\Lights.cpp" />
     <ClCompile Include="render\RayTracer\RenderObject\RenderObject.cpp" />
