--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClInclude Include="render\Graphics\VertexBuffer.hpp">
       <Filter>Header Files\Graphics</Filter>
     </ClInclude>
+    <ClInclude Include="render\Graphics\CBStructs.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="render\D3D\d3d.cpp">
@@ -178,6 +181,9 @@
     </ClCompile>
     <ClCompile Include="source\utility\utility.cpp">
       <Filter>Source Files\Util</Filter>
+    </ClCompile>
+    <ClCompile Include="render\Graphics\VertexShader.cpp">
+      <Filter>Source Files\Graphics</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
