--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClInclude Include="render\Graphics\CBStructs.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="render\Graphics\ConstantBuffer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="render\D3D\d3d.cpp">
